maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:17: error: method isDirectionFree has return statement; needs result type
		if (dir==Direction.EAST) {gauche(); if(!estFaceMur()) {droite();return true} ; return false}
                                                                                ^Escaper:17: error: method isDirectionFree has return statement; needs result type
		if (dir==Direction.EAST) {gauche(); if(!estFaceMur()) {droite();return true} ; return false}
                                                                                               ^Escaper:18: error: method isDirectionFree has return statement; needs result type
		if (dir==Direction.WEST) {droite(); if(!estFaceMur()) {gauche();return true} ; return false}
                                                                                ^Escaper:18: error: method isDirectionFree has return statement; needs result type
		if (dir==Direction.WEST) {droite(); if(!estFaceMur()) {gauche();return true} ; return false}
                                                                                               ^Escaper:19: error: method isDirectionFree has return statement; needs result type
		if (dir==Direction.NORTH && !estFaceMur()) {return true}
                                                            ^Escaper:20: error: method isDirectionFree has return statement; needs result type
		return false
                ^